# rust-axum-sqlx-redis-ws-template

./: .env.example  .env.test  .gitignore  Cargo.toml  LICENSE  README.md  compose-tests.yaml  compose.yaml  docker-compose-tests.yaml  docker-compose.yaml
assets/: index.html
migrations/: 0003_users.up.sql  001_cars.up.sql  002_parts.up.sql
src/: config.rs  main.rs  password.rs
src/app/: mod.rs
src/cache/: mod.rs
src/controllers/: auth.rs  cars.rs  mod.rs  parts.rs  users.rs  utils.rs
src/db/postgres/: mod.rs
src/db/redis/: mod.rs
src/error/: mod.rs
src/models/: car.rs  mod.rs  part.rs  user.rs
src/repositories/: car.rs  mod.rs  part.rs  user.rs
src/router/: mod.rs
src/services/: cars.rs  mod.rs  parts.rs  users.rs
src/tests/: mod.rs
src/tests/fixture/: car.rs  part.rs  user.rs
