[package]
name = "rust-axum-sqlx-redis-ws-template"
version = "0.1.0"
edition = "2024"
description = "Rust+Axum+Sqlx+Redis+Postgres Web Service Template"
authors = ["Kris <krzysztof.grajek@softwaremill.com>"]

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
bb8-redis = "0.23.0"
redis = "0.31"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "any", "postgres", "uuid"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["full"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa-axum = { version = "0.2.0" }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
anyhow = "1.0.91"
async-trait = "0.1"
thiserror = "2"
mockall = "0.13"
once_cell = "1.20.2"
hyper = "1.5.0"
serde_with = "3.12.0"
validator = { version = "0.20.0", features = ["derive"] }
argon2 = "0.5.3"
rand = "0.9.1"
regex = "1.11.1"
